fix : changing tests location & add plugin maven